[package]
name = "rmf_site_map_server"
version = "0.4.1"
authors = ["Luca Della Vedova <lucadv@intrinsic.ai>"]
edition = "2021"

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
rmf_site_format = { git = "https://github.com/open-rmf/rmf_site", branch = "main" }

[[bin]]
name = "site_map_server"
path = "src/main.rs"

[dependencies.rclrs]
git = "https://github.com/mxgrey/ros2_rust"
branch = "crossflow"

[dependencies.rmf_building_map_msgs]
version = "*"

[dependencies.service_msgs]
version = "*"
