[package]
name = "rmf_site_map_server"
version = "0.4.1"
authors = ["Luca Della Vedova <lucadv@intrinsic.ai>"]
edition = "2021"

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
rmf_site_format = "0.0.2"

[[bin]]
name = "site_map_server"
path = "src/main.rs"

[dependencies.rclrs]
git = "https://github.com/mxgrey/ros2_rust"
rev = "a8de85b"

[dependencies.rosidl_runtime_rs]
git = "https://github.com/mxgrey/rosidl_runtime_rs"
rev = "cfe5ea0"

[dependencies.rmf_building_map_msgs]
version = "*"

[dependencies.service_msgs]
version = "*"
