<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_building_map_server_rs</name>
  <version>0.0.1</version>
  <description>Building map server</description>
  <maintainer email="lucadv@intrinsic.ai">Luca Della Vedova</maintainer>
  <license>Apache License 2.0</license>

  <build_depend>rclrs</build_depend>
  <build_depend>rosidl_runtime_rs</build_depend>
  <build_depend>service_msgs</build_depend>
  <build_depend>rmf_building_map_msgs</build_depend>

  <exec_depend>rclrs</exec_depend>
  <exec_depend>rosidl_runtime_rs</exec_depend>
  <exec_depend>service_msgs</exec_depend>
  <exec_depend>rmf_building_map_msgs</exec_depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
